today i did a lot of guessing

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,8 +1,11 @@
+/AirLineRegistration.class
+/AnimalFarm.class
 /NasaCountdown.class
 /POTATO.class
 /RobotSquare.class
+/XGeeks.class
 /YearsAlive.class
 /ifElsePractice.class
-/AirLineRegistration.class
-/AnimalFarm.class
-/XGeeks.class
+/highLowGame.class
+/HighLowGame.class
+/LowHighGame.class
