Option Dialog and Methods

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -4,12 +4,15 @@
 /HighLowGame.class
 /LowHighGame.class
 /NasaCountdown.class
+/OptionDialog.class
 /POTATO.class
 /RobotSquare.class
+/SoundTrackToLife.class
 /StarShow.class
 /XGeeks.class
 /YearsAlive.class
 /ifElsePractice.class
-/SoundTrackToLife.class
-/ShowOptionDialog.class
-/OptionDialog.class
+/HowDoYouFeelColors.class
+/ChristmasTree.class
+/CrazyCatLady.class
+/METHODS.class
