--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,8 +1,12 @@
 /AirLineRegistration.class
 /AnimalFarm.class
+/ChristmasTree.class
+/CrazyCatLady.class
 /DizzyTortoise.class
 /HighLowGame.class
+/HowDoYouFeelColors.class
 /LowHighGame.class
+/METHODS.class
 /NasaCountdown.class
 /OptionDialog.class
 /POTATO.class
@@ -12,7 +16,10 @@
 /XGeeks.class
 /YearsAlive.class
 /ifElsePractice.class
-/HowDoYouFeelColors.class
-/ChristmasTree.class
-/CrazyCatLady.class
-/METHODS.class
+/Fruitquiz.class
+/FruitQuiz.class
+/362204__taranp__horn-fail-wahwah-3.wav
+/270402__littlerobotsoundfactory__jingle-win-00.wav
+/win.wav
+/lose.wav
+/ForLoops.class
