--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,8 +1,12 @@
+/270402__littlerobotsoundfactory__jingle-win-00.wav
+/362204__taranp__horn-fail-wahwah-3.wav
 /AirLineRegistration.class
 /AnimalFarm.class
 /ChristmasTree.class
 /CrazyCatLady.class
 /DizzyTortoise.class
+/ForLoops.class
+/FruitQuiz.class
 /HighLowGame.class
 /HowDoYouFeelColors.class
 /LowHighGame.class
@@ -16,10 +20,6 @@
 /XGeeks.class
 /YearsAlive.class
 /ifElsePractice.class
-/Fruitquiz.class
-/FruitQuiz.class
-/362204__taranp__horn-fail-wahwah-3.wav
-/270402__littlerobotsoundfactory__jingle-win-00.wav
-/win.wav
 /lose.wav
-/ForLoops.class
+/win.wav
+/The3numbers.class
